Fix swagger auth
