# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  main.user:
+  models.User:
     properties:
       address:
         type: string
@@ -10,18 +10,46 @@ definitions:
         type: string
     type: object
 info:
-  contact:
-    email: aaa
-    name: API Support
-  description: Swagger API for Golang Project .
-  license:
-    name: MIT
-    url: https://github.com/MartinHeinz/go-project-blueprint/blob/master/LICENSE
-  termsOfService: http://swagger.io/terms/
-  title: Blueprint Swagger API
+  contact: {}
+  description: Swagger API for Golang Project
+  title: Project Swagger API
   version: "1.0"
 paths:
   /users:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+      security:
+      - BasicAuth: []
+      summary: Retrieves all users
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: User Info
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.User'
+      security:
+      - BasicAuth: []
+      summary: Creates user based on user info
+  /users/{id}:
     delete:
       parameters:
       - description: User ID
@@ -38,40 +66,6 @@ paths:
       - BasicAuth: []
       summary: Delete user by ID
     get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/main.user'
-            type: array
-      security:
-      - BasicAuth: []
-      summary: Retrieves all users
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: User Info
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/main.user'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/main.user'
-      security:
-      - BasicAuth: []
-      summary: Creates user based on user info
-  /users/{id}:
-    get:
       parameters:
       - description: User ID
         in: path
@@ -85,7 +79,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/main.user'
+              $ref: '#/definitions/models.User'
             type: array
       security:
       - BasicAuth: []
@@ -104,18 +98,18 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/main.user'
+          $ref: '#/definitions/models.User'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.user'
+            $ref: '#/definitions/models.User'
       security:
       - BasicAuth: []
       summary: Update user info based on given ID
 securityDefinitions:
-  "":
+  BasicAuth:
     type: basic
 swagger: "2.0"
